--- a/apps/onis_site_server/CMakeLists.txt
+++ b/apps/onis_site_server/CMakeLists.txt
@@ -1,10 +1,20 @@
 # ONIS Site Server CMakeLists.txt
+cmake_minimum_required(VERSION 3.20)
 
 project(onis_site_server VERSION 1.0.0 LANGUAGES CXX)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Debug configuration
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0")
+    message(STATUS "Building in Debug mode with symbols")
+endif()
+
+# Add the shared C++ library first
+add_subdirectory(${CMAKE_SOURCE_DIR}/../../shared/cpp/onis_core ${CMAKE_BINARY_DIR}/onis_core)
 
 # Source files
 set(SERVER_SOURCES
