feat: Add onis_kit library with full build configuration
- Create onis_kit library with CMake configuration
- Add result.hpp, types.hpp, and object.hpp headers
- Implement result.cpp with error handling functionality
- Add build script for onis_kit library
- Update root CMakeLists.txt to include onis_kit
- Update onis_site_server to link against onis_kit
- Add missing constants (OSTRUE, OSFALSE, OSRSP_SUCCESS)
- Fix include paths and CMake configuration
- Test library integration with onis_site_server
- Format all C++ code with clang-format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,11 @@ if(BUILD_ONIS_CORE)
     add_subdirectory(shared/cpp/onis_core)
 endif()
 
+# Add onis_kit library
+if(EXISTS "${CMAKE_SOURCE_DIR}/libs/onis_kit")
+    add_subdirectory(libs/onis_kit)
+endif()
+
 # Add applications
 if(EXISTS "${CMAKE_SOURCE_DIR}/apps/onis_site_server")
     add_subdirectory(apps/onis_site_server)
