feat: implement advanced database study table with multi-selection and keyboard support
- Add resizable data table with column resizing functionality
- Implement multi-selection with keyboard modifiers (Ctrl/Cmd, Shift)
- Add range selection support with Shift key
- Create manual toggle for multi-selection mode
- Add filter bar with real-time filtering for each column
- Implement row-level selection for better UX
- Add visual indicators for selection modes
- Support horizontal scrolling with proper width calculation
- Add Study model with proper data structure
- Integrate with DatabaseController for state management
- Add keyboard event handling at page level
- Improve visual hierarchy with distinct section colors
- Fix alignment issues between header, filter, and data rows

--- a/apps/onis_viewer/pubspec.yaml
+++ b/apps/onis_viewer/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 
   # Path utilities for plugin management
   path: ^1.9.0
+  flutter_advanced_table: ^1.1.5
 
 dev_dependencies:
   flutter_test:
