feat(database): add username display and async disconnect functionality to study list
- Add currentUsername getter and isDisconnecting state to SiteSource
- Make disconnect() method async with 10-second simulation delay
- Update StudyListView header to show 'Logged in as: username' on same line as disconnect button
- Add loading spinner and disabled state to disconnect button during disconnection
- Update DatabasePage to handle async disconnect and pass disconnecting state
- Clean up unused header methods in SiteServerLoginPanel

--- a/apps/onis_viewer/pubspec.yaml
+++ b/apps/onis_viewer/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   # Path utilities for plugin management
   path: ^1.9.0
   flutter_advanced_table: ^1.1.5
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
