feat(api): add async request core with HTTP implementation
- Add AsyncRequest interface with send() and cancel() methods
- Add RequestType enum for different request types (findStudies, import, export, login, etc.)
- Add AsyncResponse interface for structured response handling
- Add SiteAsyncRequest HTTP implementation for site-server plugin
- Add http package dependency for network requests
- Organize request files in appropriate plugin structure

--- a/apps/onis_viewer/pubspec.yaml
+++ b/apps/onis_viewer/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_advanced_table: ^1.1.5
   flutter_secure_storage: ^9.2.2
 
+  # HTTP client for making network requests
+  http: ^1.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
