feat(site-server): enable onis_kit include paths for onis_site_server
- Add libs directory to include paths in onis_site_server CMakeLists.txt
- Enable #include 'onis_kit/include/core/thread.hpp' style includes
- Create include_test.cpp to demonstrate proper include path usage
- Allow onis_site_server to access onis_kit library headers
- Maintain existing include paths for backward compatibility

--- a/apps/onis_site_server/CMakeLists.txt
+++ b/apps/onis_site_server/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/../../libs/onis_kit ${CMAKE_BINARY_DIR}/oni
 # Source files
 set(SERVER_SOURCES
     src/main.cpp
+    src/include_test.cpp
 )
 
 set(SERVER_HEADERS
@@ -37,6 +38,7 @@ add_executable(onis_site_server
 target_include_directories(onis_site_server PRIVATE
     ${CMAKE_SOURCE_DIR}/shared/cpp
     ${CMAKE_SOURCE_DIR}/libs/onis_kit/public
+    ${CMAKE_SOURCE_DIR}/libs
 )
 
 # Link libraries
