fix(site-server): resolve Drogon server threading and shutdown issues
- Fix thread stop() method to post DGMSG_QUIT before setting will_quit flag
- Remove detached thread causing SIGABRT crashes in Drogon server
- Add timeout mechanism for worker thread join to prevent freezing
- Create SSL certificates for HTTPS server functionality
- Update drogon_http_server to accept request_service parameter
- Add proper error handling and debug output for server lifecycle
- Configure CMakeLists.txt to install certificates and link dependencies

The site server now starts and stops cleanly without crashes or freezing.

--- a/apps/onis_site_server/CMakeLists.txt
+++ b/apps/onis_site_server/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SERVER_SOURCES
     src/main.cpp
     src/network/drogon/drogon_http_server.cpp
     src/network/drogon/drogon_http_controller.cpp
+    src/services/requests/request_service.cpp
 )
 
 set(SERVER_HEADERS
@@ -74,4 +75,10 @@ install(TARGETS onis_site_server
 install(DIRECTORY config/
     DESTINATION etc/onis_site_server
     FILES_MATCHING PATTERN "*.conf" PATTERN "*.json"
+)
+
+# Copy certificates
+install(DIRECTORY certificates/
+    DESTINATION etc/onis_site_server/certificates
+    FILES_MATCHING PATTERN "*.crt" PATTERN "*.key"
 ) 
