fix(site-server): resolve authentication connection issues
- Add network client entitlements for macOS app sandboxing
- Set up global HttpOverrides in main.dart for SSL certificate bypass
- Configure App Transport Security for local networking
- Use 127.0.0.1 instead of localhost to bypass DNS issues
- Add HTTP listener on port 5556 for testing (server-side)
- Remove duplicate SSL override code from SiteAsyncRequest

The Flutter app can now successfully authenticate with the Drogon server
using HTTPS with self-signed certificates on macOS.

--- a/apps/onis_viewer/macos/Runner/Info.plist
+++ b/apps/onis_viewer/macos/Runner/Info.plist
@@ -28,6 +28,8 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>This app needs to connect to local network services for authentication and data access.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
