feat(database): add comprehensive database interface implementation (#34)
* feat(database): add comprehensive database interface implementation

- Add database_interface.hpp with core database abstractions
- Add PostgreSQL implementation (connection, query, result)
- Add SQLite implementation (connection, query, result)
- Organize database files into postgresql/ and sqlite/ subdirectories
- Update CMakeLists.txt with database dependencies and build configuration
- Move core headers from public/ to include/ directory
- Add proper library linking for PostgreSQL (libpq) and SQLite
- Implement snake_case naming convention throughout
- Add comprehensive error handling and parameter binding support
- Build successfully with both PostgreSQL and SQLite libraries

* fix(database): update PostgreSQL paths for Postgres.app installation

- Replace pkg-config approach with direct path configuration
- Add Postgres.app specific include and library directories
- Fix compilation issues with PostgreSQL 15 from Postgres.app
- Remove dependency on Homebrew PostgreSQL installation

---------

Co-authored-by: ONIS Viewer Developer <developer@onis-app.com>

--- a/libs/onis_kit/CMakeLists.txt
+++ b/libs/onis_kit/CMakeLists.txt
@@ -5,6 +5,17 @@ project(onis_kit VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Find required packages
+find_package(PkgConfig REQUIRED)
+
+# PostgreSQL paths for Postgres.app installation
+set(POSTGRESQL_INCLUDE_DIRS "/Applications/Postgres.app/Contents/Versions/15/include")
+set(POSTGRESQL_LIBRARY_DIRS "/Applications/Postgres.app/Contents/Versions/15/lib")
+set(POSTGRESQL_LIBRARIES "pq")
+
+# Find SQLite3
+pkg_check_modules(SQLITE3 REQUIRED sqlite3)
+
 # Debug configuration
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0")
@@ -16,15 +27,30 @@ set(ONIS_KIT_SOURCES
     src/core/result.cpp
     src/core/thread.cpp
     src/core/event.cpp
+    src/database/postgresql/postgresql_connection.cpp
+    src/database/postgresql/postgresql_query.cpp
+    src/database/postgresql/postgresql_result.cpp
+    src/database/sqlite/sqlite_connection.cpp
+    src/database/sqlite/sqlite_query.cpp
+    src/database/sqlite/sqlite_result.cpp
 )
 
 # Header files
 set(ONIS_KIT_HEADERS
-    public/core/result.hpp
-    public/core/object.hpp
-    public/core/types.hpp
-    public/core/thread.hpp
-    public/core/event.hpp
+    include/core/result.hpp
+    include/core/object.hpp
+    include/core/types.hpp
+    include/core/thread.hpp
+    include/core/event.hpp
+    include/database/database_interface.hpp
+    include/database/postgresql/postgresql.hpp
+    include/database/postgresql/postgresql_connection.hpp
+    include/database/postgresql/postgresql_query.hpp
+    include/database/postgresql/postgresql_result.hpp
+    include/database/sqlite/sqlite.hpp
+    include/database/sqlite/sqlite_connection.hpp
+    include/database/sqlite/sqlite_query.hpp
+    include/database/sqlite/sqlite_result.hpp
 )
 
 # Create shared library
@@ -42,13 +68,27 @@ set_target_properties(onis_kit PROPERTIES
 
 # Include directories
 target_include_directories(onis_kit PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/public>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include/onis_kit>
+    ${POSTGRESQL_INCLUDE_DIRS}
+    ${SQLITE3_INCLUDE_DIRS}
 )
 
 # Compiler definitions
 target_compile_definitions(onis_kit PRIVATE
     ONIS_KIT_LIBRARY
+)
+
+# Link libraries
+target_link_libraries(onis_kit PRIVATE
+    ${POSTGRESQL_LIBRARIES}
+    ${SQLITE3_LIBRARIES}
+)
+
+# Add library directories
+target_link_directories(onis_kit PRIVATE
+    ${POSTGRESQL_LIBRARY_DIRS}
+    ${SQLITE3_LIBRARY_DIRS}
 )
 
 # Installation
