feat(site-server): add singleton site_api class with clean interface

--- a/apps/onis_site_server/CMakeLists.txt
+++ b/apps/onis_site_server/CMakeLists.txt
@@ -27,6 +27,7 @@ set(JSONCPP_LIBRARIES "${JSONCPP_ROOT}/lib/libjsoncpp.dylib")
 # Source files
 set(SERVER_SOURCES
     src/main.cpp
+    src/site_api.cpp
     src/network/drogon/drogon_http_server.cpp
     src/network/drogon/drogon_http_controller.cpp
     src/services/requests/request_service.cpp
