feat(onis-viewer): implemented site server authentication

--- a/apps/onis_viewer/pubspec.yaml
+++ b/apps/onis_viewer/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
 
   # HTTP client for making network requests
   http: ^1.2.0
+  uuid_v4: ^1.0.2
 
 dev_dependencies:
   flutter_test:
