--- a/apps/onis_site_server/CMakeLists.txt
+++ b/apps/onis_site_server/CMakeLists.txt
@@ -69,6 +69,7 @@ set(SERVER_SOURCES
     src/database/site_database_partition.cpp
     src/database/site_database_album.cpp
     src/database/site_database_smart_album.cpp
+    src/database/site_database_patient.cpp
     src/database/sql_builder.cpp
     src/database/site_database_pool.cpp
 )
