feat(site-server): added study database basic methods

--- a/apps/onis_site_server/CMakeLists.txt
+++ b/apps/onis_site_server/CMakeLists.txt
@@ -70,6 +70,7 @@ set(SERVER_SOURCES
     src/database/site_database_album.cpp
     src/database/site_database_smart_album.cpp
     src/database/site_database_patient.cpp
+    src/database/site_database_study.cpp
     src/database/sql_builder.cpp
     src/database/site_database_pool.cpp
 )
