--- a/libs/onis_kit/CMakeLists.txt
+++ b/libs/onis_kit/CMakeLists.txt
@@ -27,6 +27,7 @@ set(ONIS_KIT_SOURCES
     src/core/result.cpp
     src/core/thread.cpp
     src/core/event.cpp
+    src/core/date_time.cpp
     src/dicom/dicom.cpp
     src/database/postgresql/postgresql_connection.cpp
     src/database/postgresql/postgresql_query.cpp
@@ -36,6 +37,9 @@ set(ONIS_KIT_SOURCES
     src/database/sqlite/sqlite_result.cpp
     src/utilities/uuid.cpp
     src/utilities/regex.cpp
+    src/utilities/string.cpp
+    src/utilities/dicom.cpp
+    src/utilities/filesystem.cpp
 )
 
 # Header files
@@ -77,6 +81,14 @@ target_include_directories(onis_kit PUBLIC
     ${SQLITE3_INCLUDE_DIRS}
 )
 
+# Add iconv include directory for string conversion functions
+# This ensures the libiconv header is used instead of system iconv.h
+if(TARGET iconv)
+    target_include_directories(onis_kit PRIVATE
+        ${CMAKE_SOURCE_DIR}/libs/dicom/iconv/include
+    )
+endif()
+
 # Compiler definitions
 target_compile_definitions(onis_kit PRIVATE
     ONIS_KIT_LIBRARY
@@ -86,6 +98,7 @@ target_compile_definitions(onis_kit PRIVATE
 target_link_libraries(onis_kit PRIVATE
     ${POSTGRESQL_LIBRARIES}
     ${SQLITE3_LIBRARIES}
+    iconv  # Required for string conversion functions (built in libs/dicom/iconv)
 )
 
 # Add library directories
@@ -96,16 +109,15 @@ target_link_directories(onis_kit PRIVATE
 
 # Installation
 install(TARGETS onis_kit
-    EXPORT onis_kitTargets
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
     RUNTIME DESTINATION bin
     PUBLIC_HEADER DESTINATION include/onis_kit
 )
 
-# Export targets
-install(EXPORT onis_kitTargets
-    FILE onis_kitTargets.cmake
-    NAMESPACE onis_kit::
-    DESTINATION lib/cmake/onis_kit
-) 
+# Export targets (commented out due to iconv dependency export issue)
+# install(EXPORT onis_kitTargets
+#     FILE onis_kitTargets.cmake
+#     NAMESPACE onis_kit::
+#     DESTINATION lib/cmake/onis_kit
+# ) 
